# over-the-skies

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-ios.sh  build-production.cmd  build.cmd  build_and_make_with_clang.cmd  build_emscripten.sh  build_emscripten_debug.sh  build_emscripten_release.sh  run_python_http_server.sh  run_yandex_dev_server.sh
android/: .gitignore  build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/dreamskies/hcg001/: MainActivity.java
android/app/src/main/java/com/skymunge/hcg001/: DummyActivity.java  MainActivity.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
art_src/: icon.ai
art_src/snowflake/: snowflake2.pdn
assets/: achievements.json  atlases.json
assets/localization/: english.txt  russian.txt
ios/: Info.plist  LaunchScreen.storyboard  Main.storyboard  app_delegate.mm  main.mm
market_assets/: logo.ai
output/: index.data  index.html  index.js
scripts/: build-ios-production.sh  build-ios.sh  build_emscripten.sh  build_emscripten_debug.sh  build_emscripten_release.sh
server/: CMakeLists.txt
server/src/: guild.cpp  guild.h  main.cpp  server.cpp  server.h
server_src/: guild.h  main.cpp  server.cpp  server.h
src/: achievements.cpp  achievements.h  application.cpp  application.h  buy_skin_menu.cpp  buy_skin_menu.h  cheats.h  client.cpp  client.h  daily_reward_window.cpp  daily_reward_window.h  defines.h  game_systems.h  gameover_menu.cpp  gameover_menu.h  gameplay.cpp  gameplay.h  gameplay_screen.cpp  gameplay_screen.h  guild.cpp  guild.h  helpers.cpp  helpers.h  hud.cpp  hud.h  input_window.cpp  input_window.h  main.cpp  main_menu.cpp  main_menu.h  options_window.cpp  options_window.h  plane.cpp  plane.h  player.cpp  player.h  profile.cpp  profile.h  ready_menu.cpp  ready_menu.h  (+14 more)
src/emscripten/: shell.html
src/windows/: achievements_window.cpp  achievements_window.h  chat_widget.cpp  chat_widget.h  confirm_window.cpp  confirm_window.h  create_guild_window.cpp  create_guild_window.h  daily_reward_window.cpp  daily_reward_window.h  global_chat_window.cpp  global_chat_window.h  guilds_window.cpp  guilds_window.h  highscores_window.cpp  highscores_window.h  input_window.cpp  input_window.h  options_window.cpp  options_window.h  response_wait_window.cpp  response_wait_window.h  shop_window.cpp  shop_window.h  window.cpp  window.h
